<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CurrentJobActivity">

<!--    <Button-->
<!--        android:id="@+id/mainMenuBtn"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Main Menu"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.05"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.03" />-->

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="Current Job Details"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHeight_percent="0.65">

        <LinearLayout
            android:id="@+id/formLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Title"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/titleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Company-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Company"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/companyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- City -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="City"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/cityText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- State -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="State"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/stateText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Cost -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Cost of Living"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/costText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Salary -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Yearly Salary"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/salaryText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number|numberDecimal"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Bonus -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Yearly Bonus"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/bonusText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number|numberDecimal"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Option -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Number of Stock Option"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/optionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number|numberDecimal"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Home Buying Program Fund -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="Home Buying Program Fund"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/hbpText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number|numberDecimal"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Personal Choice Holiday -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Personal Choice Holiday"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/holidayText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Monthly Internet Stipend -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Monthly Internet Stipend"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/stipendText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:hint="Enter"
                    android:inputType="number|numberDecimal"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>